[tool.poetry]
name = "pydjantic"
version = "0.1.0"
description = ""
authors = ["Vyazovetskov Vladimir <erhosen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pre-commit = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
