[tool.poetry]
name = "pydjantic"
version = "1.1.2"
description = "Pydantic Settings for Django"
authors = ["Vladimir Vyazovetskov <erhosen@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ErhoSen/pydjantic"
repository = "https://github.com/ErhoSen/pydjantic"
keywords = ["pydantic", "django", "PydanticSettings", "settings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
include = [
    "LICENSE",
]


[tool.poetry.dependencies]
python = "^3.8"
dj-database-url = "^2.1.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pre-commit = "^2.11.1"
tempenv = "^2.0.0"
deepdiff = "^5.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
